= 0.0.23 2006-11-29

* Fix for camping error on initial load
* Allow dashes in wikiwords

= 0.0.22 2006-11-28

* *EXISTING USERS PLEASE READ THE RELEASE NOTES*
* Data dump improvements
* Removed yahoo grids (weren't using them), page structure simplification
* Changed page naming convention (underscores in url, spaces in title and db) 
* Changed header format to help avoid title duplication in text

= 0.0.21 2006-11-26

* *EXISTING USERS PLEASE READ THE RELEASE NOTES*
* INT and TERM signals handling -- Thanks zimbatm!
* Support for databases other than sqlite3 -- Thanks Robert Gogolok

= 0.0.20 2006-11-23

* Rake task to update local documentation (rake update:help)
* Documentation updates
* Version bugfix. Thanks DJ

= 0.0.19 2006-11-22

* *BE SURE TO READ THE RELEASE NOTES*
* 'Recent Pages' page improvements
* Atom feed improvements
* Rename gem from junebug to junebug-wiki
* Renamed 'static' dir to 'public'
* Performance improvements

= 0.0.18 2006-11-21

* Changed diff output to compare unformatted text
* Converted to using hoe
* Quicksave option (doesn't increment version)
* Signup redirect bugfix
* External lib dir (ext)

= 0.0.17 2006-11-19

* Quick bugfix for login redirects behind proxy

= 0.0.16 2006-11-19

* Style tweaks
* Login/logout redirects you back to the page you were on

= 0.0.15 2006-11-17

* Loosen up mongrel requirements for windows users -- thanks deejay
* Bugfix for static file issue #6536. Thanks zimbatm
* Added css for wrapping pre text
* Changed wikiword syntax to [[link]]
* Unit testing improvements
* Command line help
 
= 0.0.14 2006-11-14

* Page title cleanup
* Rake task reorg
* Dump task
* Added error checking to generator

= 0.0.13 2006-11-14

* Link style improvement/simplification
* Autolinking urls
* use user.role to determine admin rights
* is_admin?, logged_in?

= 0.0.12 2006-11-13

* content div bugfix

= 0.0.11 2006-11-13

* Added revert
* Versioning bugfix
* Changed delete operation
* Added 'role' user field
