@@ -102,6 +102,7 @@ body {
     color: #333;
     font-size: 100%;
     padding: 8px;
+    margin-top: 10px;
     margin-bottom: 10px;
     line-height: 150%;
 }
