@@ -2,7 +2,7 @@ module Junebug #:nodoc:
   module VERSION #:nodoc:
     MAJOR = 0
     MINOR = 0
-    TINY  = 22
+    TINY  = 23
 
     STRING = [MAJOR, MINOR, TINY].join('.')
   end
